# are-you-blind

./: .gitignore  Cargo.toml  PROJECT_INDEX.md  README.md  build.rs
.agent/rules/: my-rule.md
.cargo/: config.toml
.github/workflows/: build.yml
src_rust/: main.rs
ui/: appwindow.slint
